--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </a>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
-                    <input type="password" name="masterPass" value="" id="masterPass" class="validate fieldOn large" onfocus="$(this).select();" onclick="$(this).select();" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off"
+                    <input type="password" name="masterPass" value="" id="masterPass" class="masterPass validate fieldOn large" onfocus="$(this).select();" onclick="$(this).select();" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off"
                         spellcheck="false" tabindex="1" style="" />
                     <label for="master">Master Password:</label>
                 </div>
