--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <form name="formCloud" class="formCloud col s12" id="formCloud" action="javascript:void(0); onsubmit="return false;"">
             <header class="light-blue row">
-                <div class="col s12 m12 l12 text-white inline">
+                <div class="col s12 m12 l12 text-white inline" style="margin-bottom: 10px;">
                     <a href="#" data-activates="slide-out" class="menuButton button-collapse circle hide-on-large-only white-text">
                         <i class="material-icons white-text">menu</i>
                     </a>
