--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     </ul>
 </body>
 <script src="./js/jquery.min.js" data-version="3.2.1" data-source="https://github.com/jquery/jquery"></script>
+<script src="./js/jquery.mobile-events.min.js" data-version="1.0.9" data-source="https://github.com/benmajor/jQuery-Touch-Events"></script>
 <script src="./js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize"></script>
 <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
 <script src="./js/crypt.io.min.js" data-version="1.0.0" data-source="https://github.com/jas-/crypt.io"></script>
