back to using shitty clipboard.js

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
 <script src="./js/crypt.io.min.js" data-version="1.0.0" data-source="https://github.com/jas-/crypt.io"></script>
 <script src="./js/sjcl.js" data-version="1.0.4" data-source="https://github.com/bitwiseshiftleft/sjcl"></script>
-<!--<script src="./js/clipboard.min.js" data-version="1.7.1" data-source="https://github.com/zenorocha/clipboard.js"></script>-->
+<script src="./js/clipboard.min.js" data-version="1.7.1" data-source="https://github.com/zenorocha/clipboard.js"></script>
 <!--<script src="./js/" data-version="" data-source=""></script>-->
 <script src="./js/app.js"></script>
 <script src="./js/xkcd.js"></script>
