force unique characters in passwords!

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <meta name="twitter:image" content="./img/bg.png>" />
     <meta name="twitter:twitter:image:alt" content="https://passcloud.me" />
     <!-- STYLES -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <link rel="stylesheet" href="./css/materialize.min.css" />
+    <link rel="stylesheet" href="./css/materialicons.css" />
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
