--- a/index.html
+++ b/index.html
@@ -48,20 +48,17 @@
                     </a>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
-                    <input type="password" name="masterPass" value="" id="masterPass" class="masterPass validate fieldOn large" onfocus="$(this).select();" onclick="$(this).select();" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off"
-                        spellcheck="false" tabindex="1" /><button class="clearInput" onClick="clearInput(masterPass);">&#10005;</button>
+                    <input type="password" name="masterPass" value="" id="masterPass" class="masterPass validate fieldOn large" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="1" /><button class="clearInput" onClick="clearInput(masterPass);">&#10005;</button>
                     <label class="mp" for="master">Master Password:</label>
                 </div>
             </header>
             <div class="row">
                 <div class="input-field col s12 m6 l6">
-                    <input type="url" name="siteName" value="" id="siteName" class="fieldOn" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2"
-                    /><button class="clearInput" onClick="clearInput(siteName);">&#10005;</button>
+                    <input type="url" name="siteName" value="" id="siteName" class="fieldOn"title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2" /><button class="clearInput" onClick="clearInput(siteName);">&#10005;</button>
                     <label for="site">Site Name:</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input type="text" name="userProfile" value="" id="userProfile" class="fieldOn" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a valid username or profile." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
-                        tabindex="3" /><button class="clearInput" onClick="clearInput(userProfile);">&#10005;</button>
+                    <input type="text" name="userProfile" value="" id="userProfile" class="fieldOn" title="Please enter a valid username or profile." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="3" /><button class="clearInput" onClick="clearInput(userProfile);">&#10005;</button>
                     <label for="profile">User Profile:</label>
                 </div>
             </div>
