--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <link rel="stylesheet" href="./css/materialize.min.css" />
     <link rel="stylesheet" href="./css/materialicons.css" />
-    <link rel="stylesheet" href="./css/app.css?1" />
+    <link rel="stylesheet" href="./css/app.css" />
 </head>
 
 <body class="" onchange="generatePassword();" onkeypress="generatePassword();" onkeyup="generatePassword();">
@@ -92,7 +92,7 @@
                 <div class="input-field col s6 m3 l3">
                     <select name="passType" id="passType" onchange="generatePassword();" onkeypress="generatePassword();" tabindex="7">
                                 <option value="password" class="light-blue">Password</option>
-                                <!--<option value="username">USERNAME</option>-->
+                                <option value="username">USERNAME</option>
                                 <option value="pin">PIN</option>
                                 <option value="phrase">PHRASE</option>
                                 <option value="noun">NOUN</option>
