--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
                             <div class="collapsible-body options">
                                 <ul>
                                     <li>
+                                        <input type="checkbox" class="filled-in tooltipped" id="unique" checked="checked" />
+                                        <label for="unique" id="uniqueLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="Prevent duplicate characters.">
+                                            Unique
+                                        </label>
+                                    </li>
+                                    <li>
                                         <input type="checkbox" class="filled-in tooltipped" id="alpha" checked="checked" />
                                         <label for="alpha" id="alphaLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="A a B b C c D d E e &#8230;">
                                             Alpha
@@ -140,15 +146,9 @@
                                         </label>
                                     </li>
                                     <li>
-                                        <input type="checkbox" class="filled-in tooltipped" id="yearly" checked="checked" />
+                                        <input type="checkbox" class="filled-in tooltipped" id="yearly" />
                                         <label for="yearly" id="yearlyLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="Changes passwords every year.">
                                             Yearly
-                                        </label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" class="filled-in tooltipped" id="unique" checked="checked" />
-                                        <label for="unique" id="uniqueLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="Prevent duplicate characters.">
-                                            Unique
                                         </label>
                                     </li>
                                     <li><br/></li>
